# kurum_rebirth

./: .gitignore  README.md  build.py  config.yaml  kurumrebirth_gui.py  kurumrebirth_gui.spec  kurumrebirth_gui.txt  pyproject.toml
kurum_rebirth/: config.py  const.py  error.py  gui.py  logging.py  schema.py  util.py  vendor.py
kurum_rebirth/services/: dropbox_storage.py  storage.py  sync.py  windows_sync.py
